--- a/css/index.css
+++ b/css/index.css
@@ -1,42 +1,36 @@
 /* Navigation bar */
 body {
     font-family: Arial;
-    margin: 0;
-}
-
-.divMainContainer {
-    background-color: #666666;
-    margin: 1% 2.5%;
-    padding: 25px;
+    margin: 0px;
 }
 
 .divNavRow {
     align-items: baseline; /* align text */
-    /* background-image: linear-gradient(#4a4a4a, #121212); */
     background-image: url('img/bgNavigationBar.jpg');
     background-size: contain;
     border-bottom: 1px solid black;
     color: #7a7a7a; 
-    display: flex;
-    font-size: 18px;
     font-weight: bold;
-}
-
-.divNavCol {   
-    margin: 0;
-    min-width: 100px; /* prevent navigation coloumn text overlapping. */
-    padding: 50px 1%; 
     text-align: center;
-    width: 16%;
+    display: flex;
+    padding: 0 15%;
+    width: 100%;
 }
 
 #divName {
     color: white;
     font-size: 35px;
-    min-width: 200px; /* prevent navigation coloumn text overlapping. */
-    padding: 0 1% 0 2%;
+    padding: 0 1%;
     white-space: nowrap; /* prevent name being wrapped */
-    width: 25%;
+    width: 20%;
+}
+
+.divNavCol {   
+    /* display: inline-table; */
+    font-size: 18px;
+    padding: 50px 1%;
+    text-align: center;
+    width: 15%;
 }
 
 .divNavCol.divHover:hover {
@@ -56,20 +50,27 @@ body {
 }
 
 /* Main Content */
-.divContentBody {
+.divMainBody {
     background-color: silver;
     height: 350px;
+    padding: 0px 15%;
+    width: 100%;
+}
+
+.divContentBody {  
     display: none;
 }
 
 /* Footer */
 .divFooter {
+    width: 100%;
     align-content: center;
     background-image: linear-gradient(#121212, #4a4a4a);
     border-top: 1px solid black;
     display: flex;
     height: 100px;
     justify-content: center;
+    padding: 0px 15%;
 }
 
 .divIcon {
@@ -77,24 +78,24 @@ body {
 }
 
 .ftrIconText {
-    right: 0px;
-    left: 0px;
     bottom: 10px;
-    position: absolute;
-    visibility: hidden;
-    text-align: center;
-    white-space: nowrap;
-    font-size: 5px;
     color: white;
+    font-size: 10px;
     font-weight: bold;
+    left: 0px;
+    position: absolute;
+    right: 0px;
+    text-align: center;
+    visibility: hidden;
+    white-space: nowrap;
 }
 
 .ftrIcon {
+    border-radius: 24px;
     cursor: pointer;
     height: 50px;
-    width: 50px;
     margin: 18px 25px;
-    border-radius: 24px;
+    width: 50px;
 }
 
 .divIcon:hover .ftrIconText {
@@ -104,7 +105,3 @@ body {
 .divIcon:hover .ftrIcon {
     box-shadow: 0px 0px 15px black;
 }
-
-
-
-
