--- a/css/index.css
+++ b/css/index.css
@@ -1,36 +1,35 @@
-/* Navigation bar */
 body {
     font-family: Arial;
-    margin: 0px;
+    margin: 0px;   
 }
 
+/* Navigation bar */
 .divNavRow {
     align-items: baseline; /* align text */
     background-image: url('img/bgNavigationBar.jpg');
     background-size: contain;
     border-bottom: 1px solid black;
     color: #7a7a7a; 
-    font-weight: bold;
-    text-align: center;
     display: flex;
-    padding: 0 15%;
-    width: 100%;
+    font-weight: bold;
+    justify-content: center;
+    padding: 0px 15%;
 }
 
 #divName {
     color: white;
-    font-size: 35px;
+    font-size: 30px;
     padding: 0 1%;
+    text-align: center;
     white-space: nowrap; /* prevent name being wrapped */
-    width: 20%;
+    width: 23%;
 }
 
 .divNavCol {   
-    /* display: inline-table; */
     font-size: 18px;
     padding: 50px 1%;
     text-align: center;
-    width: 15%;
+    width: 13%; 
 }
 
 .divNavCol.divHover:hover {
@@ -54,7 +53,6 @@ body {
     background-color: silver;
     height: 350px;
     padding: 0px 15%;
-    width: 100%;
 }
 
 .divContentBody {  
@@ -63,7 +61,6 @@ body {
 
 /* Footer */
 .divFooter {
-    width: 100%;
     align-content: center;
     background-image: linear-gradient(#121212, #4a4a4a);
     border-top: 1px solid black;
