--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,9 @@ body {
     text-align: center;
     white-space: nowrap; /* prevent name being wrapped */
     width: 23%;
+    justify-content: center;
+    display: flex;
+
 }
 
 .divNavCol {   
@@ -38,7 +41,7 @@ body {
     width: 14%; 
 }
 
-.divNavCol.divHover:hover {
+.divNavRow .divNavCol.divHover:hover, .divNavRow .divSelected {
     background: #0f0f0f;
     color: white;
     cursor: pointer;
@@ -46,12 +49,8 @@ body {
     text-decoration: underline;  
 }
 
-.divSelected {
-    background: #0f0f0f;
-    color: white;
+.divNavRow .divSelected {
     cursor: auto;
-    opacity: 0.5;
-    text-decoration: underline;  
 }
 
 .sidebar {
@@ -67,17 +66,19 @@ body {
     padding-top: 60px;
   }
   
-  .sidebar a {
+  .sidebar a, .sidebar div {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
     display: block;
-    transition: 0.3s;
+    transition: 0.3s; 
   }
   
-  .sidebar a:hover {
+  .sidebar a:hover, .sidebar div:hover {
     color: #f1f1f1;
+    text-decoration: underline; 
+    cursor: pointer;
   }
   
   .sidebar .closebtn {
@@ -89,22 +90,19 @@ body {
   }
   
   .openbtn {
-    font-size: 70px;
+    font-size: 3em;
     cursor: pointer;
     background-color: transparent;
     color: white;
     border: none;
     position: fixed;
     z-index: 3;
-    height: 128px;
-    width: 128px;
     top: 0;
+    margin: 1.4rem 0 0 6%
   }
   
   .openbtn:hover {
-    background: #0f0f0f;
-    opacity: 0.5;
-    color: white;
+    color: #818181;
   }
 
 /* Main Content */
@@ -117,6 +115,7 @@ body {
 
 .divMainBody .divContentBody {  
     display: none;
+    width: 100%;
 }
 
 /* Footer */
@@ -130,14 +129,14 @@ body {
     padding: 0px 15%;
 }
 
-.divIcon {
+.divFooter div {
     position: relative;
 }
 
-.ftrIconText {
+.divFooter .ftrIconText {
     bottom: 10px;
     color: white;
-    font-size: 10px;
+    font-size: 15px;
     font-weight: bold;
     left: 0px;
     position: absolute;
@@ -147,19 +146,19 @@ body {
     white-space: nowrap;
 }
 
-.ftrIcon {
+.divFooter .ftrIcon {
     border-radius: 24px;
     cursor: pointer;
     height: 50px;
-    margin: 18px 25px;
+    margin: 1rem 1.8rem;
     width: 50px;
 }
 
-.divIcon:hover .ftrIconText {
+.divFooter div:hover .ftrIconText {
     visibility: visible;
 }
 
-.divIcon:hover .ftrIcon {
+.divFooter div:hover .ftrIcon {
     box-shadow: 0px 0px 15px black;
 }
 
