add copyright row

--- a/css/index.css
+++ b/css/index.css
@@ -109,8 +109,8 @@ body {
     background-color: #f0f0f0;
     height: 700px;
     padding-top: 128px;
-    left: 0;
-    right: 0;
+    /* left: 0; */
+    /* right: 0; */
 }
 
 .divMainBody .divContentBody {  
@@ -133,18 +133,19 @@ footer {
     display: -webkit-flex;
 }
 
-.divFooter {
+.divIconRow {
     display: flex;
     justify-content: space-around;
     max-width: 500px;
     margin: 0 auto 0 auto;
+    height: inherit;
 }
 
-.divFooter div {
+.divIconRow div {
     position: relative;
 }
 
-.divFooter .ftrIconText {
+.divIconRow .ftrIconText {
     color: white;
     font-size: 15px;
     font-weight: bold;
@@ -158,7 +159,7 @@ footer {
     margin: -10px;
 }
 
-.divFooter .ftrIcon {
+.divIconRow .ftrIcon {
     border-radius: 24px;
     cursor: pointer;
     height: 50px;
@@ -167,12 +168,20 @@ footer {
     width: 50px;
 }
 
-.divFooter div:hover .ftrIconText {
+.divIconRow div:hover .ftrIconText {
     visibility: visible;
 }
 
-.divFooter div:hover .ftrIcon {
+.divIconRow div:hover .ftrIcon {
     box-shadow: 0 0 15px black;
+}
+
+#divCopyRight {
+    background-color: #2e2e2e;
+    color: white;
+    text-align: center;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
 }
 
 
