display langauage with gauge chart.

--- a/css/index.css
+++ b/css/index.css
@@ -136,7 +136,7 @@ body {
 /* Removable if not adding border line. */
 .divContentBody .divContentRow .divContentCell .divInnerCell {
     height: 100%;
-    border: 2px solid white;
+    /* border: 2px solid white; */
 }
 
 .divContentBody .divContentRow .divContentCell .divInnerCell .divInnerCellRow {
@@ -148,19 +148,25 @@ body {
     text-align: center;
 }
 
+.divContentCell .divInnerCell .divLangContainer {
+    display: flex;
+}
+
+.divContentCell .divInnerCell .divLangContainer .divLanguageCell {
+    padding: 5px;
+    width: 85%;
+    height: 160px;
+}
+
 h1, h2, h3, h4, h5 {
     color: white;
 }
 
-.divInnerCell #tblLanguages, .divInnerCell #tblCharacteristics {
-    margin: 20px auto;
+.divInnerCell #tblCharacteristics {
+    margin: 15px auto;
     width: 85%;
-    height: 20%;
+    height: 40%;
 } 
-
-    .divInnerCell #tblCharacteristics {
-        height: 50%;
-    }
 
 .divInnerCell td {
     width: 12%;
@@ -170,6 +176,7 @@ h1, h2, h3, h4, h5 {
 
 .divInnerCell .tdAttrName {
     width: 28%;
+    height: 10%;
 }
 
 .divInnerCell .icnThumbUp {
@@ -248,6 +255,3 @@ footer {
     border-top: 1px solid white;
     border-bottom: 1px solid white;
 }
-
-
-  
