--- a/css/index.css
+++ b/css/index.css
@@ -138,13 +138,18 @@ p {
     }
 }
 
+@media screen and (min-width: 400px) {
+    p {
+        line-height: 2em;
+    }
+}
+
 .divContentBody .divContentRow .divContentCell {
     width: 100%;
     padding: 15px;
     height: 450px;
 }
 
-/* Removable if not adding border line. */
 .divContentBody .divContentRow .divContentCell .divInnerCell {
     height: 100%;
     padding-top: 4px;
