--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,7 @@ p {
     max-width: 1000px;
 }
 
-#divMainBody .divContentBody {  
+.divContentBody {  
     display: none;
 }
 
@@ -144,33 +144,32 @@ p {
     }
 }
 
-.divContentBody .divContentRow .divContentCell {
+.divContentCell {
     width: 100%;
     padding: 15px;
-    height: 450px;
 }
 
-.divContentBody .divContentRow .divContentCell .divInnerCell {
+/* .divContentBody .divContentRow .divContentCell .divInnerCell {
     height: 100%;
     padding-top: 4px;
-}
+} */
 
-.divContentCell .divInnerCell span {
+.divContentCell span {
     text-align: center;
     color: white;
 }
 
-.divContentCell .divInnerCell .divLangContainer {
+.divContentCell .divLangContainer {
     display: flex;
 }
 
-.divContentCell .divInnerCell .divLangContainer .divLanguageCell {
+.divContentCell .divLangContainer .divLanguageCell {
     padding: 5px;
     width: 85%;
     height: 160px;
 }
 
-.divInnerCell table, .divInnerCell #divIntro {
+table, #divIntro {
     margin: 15px auto;
     width: 85%;
     height: 85%;
@@ -178,40 +177,40 @@ p {
 
 #divPhotoContainer {
     background-image: url('img/profile.svg');
-    width: 20%;
-    height: 20%;
+    width: 5em;
+    height: 5em;
     background-repeat: no-repeat;
     background-size: contain;
     margin: 0.5em 0.5em 0;
     float: left;
 }
 
-.divInnerCell #tblCharacteristics {
+#tblCharacteristics {
     height: 40%;
 } 
 
-.divInnerCell td {
+td {
     width: 11%;
     text-align: left;
     color: #c9c9c9;
 }
 
-.divInnerCell #tblInfo td {
+#tblInfo td {
     vertical-align: text-top;
     font-size: 1em;
     color: #a3a3a3;
 }
 
-.divInnerCell #tblInfo .tdInfoName {
-    width: 5%;
+#tblInfo .tdInfoName {
+    width: 8%;
     color: #c9c9c9;
 }
 
-.divInnerCell .tdAttrName {
+.tdAttrName {
     width: 45%;
 }
 
-.divInnerCell .icnThumbUp {
+.icnThumbUp {
     height: 25px;
     width: 25px;
 }
@@ -221,6 +220,12 @@ p {
     margin: 0 auto;
     width: 80%;
     border-top: 1px solid grey;
+}
+
+.divContentBlock {
+    width: 80%;
+    margin: 0 auto;
+    border: 1px solid white;
 }
 
 /* Footer */
