--- a/css/index.css
+++ b/css/index.css
@@ -223,6 +223,30 @@ td {
     clear: both;
 }
 
+.imgView {
+    height: 1.2rem;
+    width: 1.2rem;
+    cursor: pointer;
+}
+
+.imgProfolios {
+    height: 85%;
+    width: 85%;
+}
+
+.imgSmallProfolios {
+    height: 10%;
+    width: 10%;
+    margin: 0 5%;
+    cursor: pointer;
+}
+
+.modelFooter {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+}
+
 /* Footer */
 footer {
     justify-content: center;
@@ -239,7 +263,7 @@ footer {
     display: -webkit-flex;
 }
 
-#divIconRow {
+.divIconRow {
     display: flex;
     display: -webkit-flex;
     justify-content: space-around;
@@ -248,11 +272,11 @@ footer {
     height: inherit;
 }
 
-#divIconRow div {
+.divIconRow div {
     position: relative;
 }
 
-#divIconRow .ftrIconText {
+.divIconRow .ftrIconText {
     color: white;
     font-size: 15px;
     font-weight: bold;
@@ -265,7 +289,7 @@ footer {
     margin: -10px;
 }
 
-#divIconRow .ftrIcon {
+.divIconRow .ftrIcon {
     border-radius: 24px;
     cursor: pointer;
     height: 50px;
@@ -273,11 +297,11 @@ footer {
     width: 50px;
 }
 
-#divIconRow div:hover .ftrIconText {
+.divIconRow div:hover .ftrIconText {
     visibility: visible;
 }
 
-#divIconRow div:hover .ftrIcon {
+.divIconRow div:hover .ftrIcon, .modelFooter img:hover {
     box-shadow: 0 0 15px black;
 }
 
