--- a/css/minesweeper.css
+++ b/css/minesweeper.css
@@ -15,7 +15,7 @@
 }
 
 .modal-content table, .modal-content tr, .modal-content td {
-    /* border: 1px solid black !important; */
+    /* border: 0px !important; */
 }
 
 .modal-content table {
@@ -25,13 +25,13 @@
 
 .modal-content td {
     width: auto !important;
-    cursor: pointer;
     text-align: center;
     color: white;
 }
 
-.modal-content td:hover {
+.modal-content .tdHover:hover {
     background-color: #e3ffff !important;
+    cursor: pointer;
 }
 
 .modal-content .tdCellLightBlue {
@@ -42,10 +42,82 @@
     background-color: #7cc4fc;
 }
 
-.divMine {
+.modal-content .divMine {
     background-image: url('img/icons/icnBomb.svg');
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    /* display: none; */
+    display: none;
+}
+
+.modal-content .divEight {
+    background-image: url('img/icons/icnEight.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.modal-content .divSeven {
+    background-image: url('img/icons/icnSeven.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.modal-content .divSix {
+    background-image: url('img/icons/icnSix.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.modal-content .divFive {
+    background-image: url('img/icons/icnFive.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.modal-content .divFour {
+    background-image: url('img/icons/icnFour.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.modal-content .divThree {
+    background-image: url('img/icons/icnThree.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.modal-content .divTwo {
+    background-image: url('img/icons/icnTwo.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.modal-content .divOne {
+    background-image: url('img/icons/icnOne.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.modal-content .divZero {
+    background-image: url('img/icons/icnZero.svg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: none;
 }
